fixed ranking align bugs

--- a/CSS/login.css
+++ b/CSS/login.css
@@ -22,10 +22,12 @@
   border: 1px solid #aaa;
   font-size: 16px;
   border-radius: 5px;
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 .input-fancy:focus{
-  border: 2px solid dodgerblue;
+  border: 1px solid dodgerblue;
 }
 
 .input-icon {
