--- a/CSS/rank.css
+++ b/CSS/rank.css
@@ -30,7 +30,7 @@
   -ms-flex: 2;
   flex: 2; }
 
-#name {
+.name {
   -webkit-box-flex: 5;
   -ms-flex: 5;
   flex: 5;
